--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Simpsons - Home</title>
+        <title>Kush Gabani</title>
+        <link rel = "icon" type = "image/icon type" href = "assets/title-icon.png" />
         <link rel="stylesheet" href="portfolio.css" />
         <!-- Bootstrap css -->
         <link
