--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
         <link rel = "icon" href = "assets/title-icon.png" type = "image/icon type" />
         <link rel="stylesheet" href="portfolio.css" />
         <!-- Bootstrap css -->
-        <link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-            integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-            crossorigin="anonymous"
-        />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <!-- GOOGLE ROBOTO & DM SERIF FONT -->
         <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&family=Poppins:wght@400;500;700;800&family=Playfair+Display&family=Roboto&display=swap"
@@ -21,69 +16,80 @@
     </head>
     <body>
         <div class = "first-screen">
-            <div class = "top-menu">
-                <div>
-                    <img src = "assets/Logo.svg" width="100"/>
-                </div>
-                <a href = "">
-                    <div>
+            <div class = "container-fluid" style = "padding-top: 1rem; margin: 0">
+                <div class = "row align-items-center">
+                    <div class = "col-2" >
+                        <img src = "assets/Logo.svg" width = "100" />
+                    </div>
+                    <!-- <div class = "col-9"></div> -->
+                    <div class = "col-1 offset-9">
+                        <a href = "#">
                         <img src = "assets/Menu.svg" width="30" />
+                        </a>
                     </div>
-                </a>
-            </div>
-
-            <div class="main-container">
-                <div class = "container">
-                    <div>
-                        <p class = "greeting">Hello World, I'm <span style = "color: #FF5B5B;">Kush Gabani</span></p>
-                    </div>
-                    <div>
-                        <p class = "display">
-                            Design,<br />
-                            Develop,<br />
-                            Solve
-                        </p>
-                    </div>
-                </div>
-                <div class = "illustration-container">
-                    <img src = "assets/illustration1.svg" class = "illustration" />
                 </div>
             </div>
 
-            <div style = "display: flex;">
-                <div><span class = "scroll-line"></span></div>
-                <div style = "margin-left: 10rem; margin-top: -5.5rem;">
-                    <a href = "mailto:kushgabz2687@gmail.com" target="_blank">
-                        <img src="assets/mail 1.svg" width="20" class = "icons">
-                    </a>
-                    <a href = "https://github.com/KushGabani" target="_blank">
-                        <img src="assets/Github.svg" width="20" class = "icons" />
-                    </a>
-                    <a href = "https://twitter.com/kaaaafifilmy" target = "_blank">
-                        <img src="assets/Twitter.svg" target="_blank" width="20" class = "icons" />
-                    </a>
-                    <a href= "https://medium.com/@kushgabz2687/" target="_blank">
-                        <img src="assets/Medium.svg" width="20" class = "icons" />
-                    </a>
-                    <a href = "https://in.pinterest.com/kushgabz2687/" target="_blank">
-                        <img src="assets/Pinterest.svg" width="20" class = "icons" />
-                    </a>
-                    <a href = "https://www.instagram.com/kush.gab/" target="_blank">
-                        <img src="assets/Instagram.svg" width="25" class = "icons" />
-                    </a>
+            <div class = "container mt-3">
+                <div class="row">
+                    <div class="col" style = "margin-top: 3rem;">
+                        <div>
+                            <div>
+                                <p class = "greeting">Hello World, I'm <span style = "color: #FF5B5B;">Kush Gabani</span></p>
+                            </div>
+                            <div>
+                                <p class = "display">
+                                    Design,<br />
+                                    Develop,<br />
+                                    Solve
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class = "px-4" style = "width: fit-content;">
+
+                            <div><span class = "scroll-line"></span></div>
+
+                            <div style = "padding: 1.5rem;">
+                                <div style = "width: fit-content">
+                                    <a href = "mailto:kushgabz2687@gmail.com" target="_blank" class = "icons">
+                                        <img src="assets/mail 1.svg" width="20">
+                                    </a>
+                                    <a href = "https://github.com/KushGabani" target="_blank" class = "icons">
+                                        <img src="assets/Github.svg" width="20" />
+                                    </a>
+                                    <a href = "https://twitter.com/kaaaafifilmy" target = "_blank" class = "icons" >
+                                        <img src="assets/Twitter.svg" target="_blank" width="20" />
+                                    </a>
+                                    <a href= "https://medium.com/@kushgabz2687/" target="_blank"  class = "icons">
+                                        <img src="assets/Medium.svg" width="20" />
+                                    </a>
+                                    <a href = "https://in.pinterest.com/kushgabz2687/" target="_blank" class = "icons" >
+                                        <img src="assets/Pinterest.svg" width="20" />
+                                    </a>
+                                    <a href = "https://www.instagram.com/kush.gab/" target="_blank" class = "icons" >
+                                        <img src="assets/Instagram.svg" width="25"/>
+                                    </a>
+                                </div>
+
+                                <div class = "p-2" style = "margin: 3.5rem 0;">
+                                    <span class = "second-title">
+                                        PROJECTS
+                                    </span>
+                                    <p class = "description">Logically minded and design centric</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-5 align-center align-items-start">
+                        <img src = "assets/illustration1.svg" class = "illustration" />
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class = "second-screen">
-            <div class="heading">
-                <span class = "second-title">
-                    PROJECTS
-                </span>
-                <p class = "description">Logically minded and design centric</p>
-            </div>
-
-            <div class = "work-area">
+            <div class = "work-area" style = "margin-top: 10%;">
                 <div class="card" id = "first-card">
                     <span class = "disp-letter align-center">W</span>
                 </div>
