design changes to hero page

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <title>Kush Gabani</title>
         <link rel = "icon" href = "assets/title-icon.png" type = "image/icon type" />
+
         <link rel="stylesheet" href="portfolio.css" />
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -30,9 +32,9 @@
                 </div>
             </div>
 
-            <div class = "container mt-3">
+            <div class = "container">
                 <div class="row">
-                    <div class="col" style = "margin-top: 3rem;">
+                    <div class="col hero-container" style = "margin-top: 10rem ;">
                         <div>
                             <div>
                                 <p class = "greeting">Hello World, I'm <span style = "color: #FF5B5B;">Kush Gabani</span></p>
@@ -46,7 +48,7 @@
                             </div>
                         </div>
 
-                        <div class = "px-4" style = "width: fit-content;">
+                        <div class = "pl-4" style = "width: fit-content;">
 
                             <div><span class = "scroll-line"></span></div>
 
@@ -81,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-5 align-center align-items-start">
+                    <div class="col-5 align-center align-items-start" style="margin-right: 5rem;">
                         <img src = "assets/illustration1.svg" class = "illustration" />
                     </div>
                 </div>
