remove unwanted elements

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                     </a>
                                 </div>
 
-                                <div class = "p-2" style = "margin: 3.5rem 0;">
+                                <div class = "p-2" style = "margin-top: 3.5rem;">
                                     <span class = "second-title">
                                         PROJECTS
                                     </span>
@@ -89,28 +89,7 @@
                 </div>
             </div>
         </div>
-
-        <div class = "second-screen">
-            <div class = "work-area" style = "margin-top: 10%;">
-                <div class="card" id = "first-card">
-                    <span class = "disp-letter align-center">W</span>
-                </div>
-
-                <div class = "card" id="second-card">
-                    <span class = "disp-letter align-center">o</span>
-                </div>
-
-                <div class = "card" id="third-card">
-                    <span class = "disp-letter align-center">r</span>
-                </div>
-
-                <div class = "card" id = "fourth-card">
-                    <span class = "disp-letter align-center">k</span>
-                </div>
-            </div>
-        </div>
-
-
+        
         <div class="third-screen">
             <div id="curve" class="contact-card">
                 <div class="footer">
