--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="col" style="margin: 0.6rem 0">
                     <input
                         type="text"
-                        placeholder="your e-mail..."
+                        placeholder="your name..."
                         autocomplete="off"
                         autocapitalize="words"
                         class="e-mail"
